--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
 .m-logo{
     width: 250px;
 }
+
+.nav-item {
+    margin: 0 50px;
+}
+
+#nav {
+    border-bottom: 2px solid #787878;
+}
+
+.nav-link {
+    font-size: 20px;
+    color: #000000;
+    font-weight: 500;
+}
+
+.carousel-item {
+    width: 400px;
+}
