--- a/components/common/header.html
+++ b/components/common/header.html
@@ -1,5 +1,5 @@
 <div class="container py-4 text-center">
     <a class="navbar-brand" href="/index.html">
-      <img class="main-logo" src="/image/knoti header.jpg" alt="logo">
+      <img class="main-logo" src="/image/main/knoti header.jpg" alt="logo">
     </a>
 </div>
