--- a/components/common/menu.html
+++ b/components/common/menu.html
@@ -16,9 +16,9 @@
         <div id="menuMyPage" class="accordion-collapse collapse" data-bs-parent="#sideMenuAccordion">
           <div class="accordion-body">
             <ul class="list-unstyled mb-0">
-              <li><a href="#">장바구니</a></li>
-              <li><a href="#">구매 품목</a></li>
-              <li><a href="#">예약 확인</a></li>
+              <li><a href="/components/mypage/mypage.html">내 정보</a></li>
+              <li><a href="/components/mypage/cart.html">장바구니</a></li>
+              <li><a href="/components/mypage/order.html">주문 조회</a></li>
             </ul>
           </div>
         </div>
@@ -37,20 +37,10 @@
               <li><a href="/components/store/bracelet.html">팔찌</a></li>
               <li><a href="/components/store/necklace.html">목걸이</a></li>
               <li><a href="/components/store/keyring.html">키링</a></li>
-              <li><a href="/components/store/material.html">재료</a></li>
+              <li><a href="/components/store/diy.html">D.I.Y</a></li>
             </ul>
           </div>
         </div>
-      </div>
-
-      <!-- About -->
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <a href="/components/about/about.html"
-            class="accordion-button collapsed no-arrow text-decoration-none">
-            About
-          </a>
-        </h2>
       </div>
 
       <!-- Reserve -->
