--- a/components/reserve/reserve.html
+++ b/components/reserve/reserve.html
@@ -24,7 +24,11 @@
 <!-- Sample Product Section -->
 <section class="py-5">
   <div class="container">
-    
+    <img class="w-100" src="/image/reserve/reserve_1.png" alt="reserve1">
+    <img class="w-100" src="/image/reserve/reserve_2.png" alt="reserve2">
+    <img class="w-100" src="/image/reserve/reserve_3.png" alt="reserve3">
+    <img class="w-100" src="/image/reserve/reserve_4.png" alt="reserve4">
+    <img class="w-100" src="/image/reserve/reserve_5.png" alt="reserve5">
   </div>
 </section>
 
