--- a/components/store/keyring.html
+++ b/components/store/keyring.html
@@ -28,8 +28,7 @@
       <li><a href="/components/store/bracelet.html">팔찌</a></li>
       <li><a href="/components/store/necklace.html">목걸이</a></li>
       <li><a href="/components/store/keyring.html" class="active">키링</a></li>
-      <li><a href="/components/store/material.html">재료</a></li>
-      <!-- <li><a href="/components/store/diy.html">D.I.Y 키트</a></li> -->
+      <li><a href="/components/store/diy.html">D.I.Y</a></li>
     </ul>
   </div>
 </section>
@@ -44,7 +43,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -54,7 +53,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -64,7 +63,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -74,7 +73,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -84,7 +83,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -94,7 +93,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -104,7 +103,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -114,7 +113,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -124,7 +123,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -134,7 +133,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -144,7 +143,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -154,7 +153,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -164,7 +163,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -174,7 +173,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -184,7 +183,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
@@ -194,7 +193,7 @@
             <div class="card-body">
             <h5 class="card-title">상품명</h5>
             <p class="card-text text-muted">₩49,000</p>
-            <a href="#" class="btn btn-outline-dark w-100">장바구니 담기</a>
+            
             </div>
         </div>
       </div>
