--- a/components/common/nav.html
+++ b/components/common/nav.html
@@ -1,7 +1,7 @@
 <div class="container justify-content-between align-items-center">
 
   <!-- Menu Button -->
-  <button class="btn p-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sideMenu">
+  <button class="btn p-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sideMenu" style="width: 80px;">
       <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -10,10 +10,9 @@
       <li class="nav-item"><a class="nav-link fw-semibold" href="/index.html">Home</a></li>
       <li class="nav-item"><a class="nav-link fw-semibold" href="/components/store/bracelet.html">Store</a></li>
       <li class="nav-item"><a class="nav-link fw-semibold" href="/components/reserve/reserve.html">Reserve</a></li>
-      <li class="nav-item"><a class="nav-link fw-semibold" href="/components/about/about.html">About</a></li>
   </ul>
 
   <!-- Right -->
-  <a href="#" class="text-decoration-none text-dark fw-semibold">Login</a>
+  <a href="/components/mypage/mypage.html" class="text-decoration-none text-dark fw-semibold" style="width: 80px;">My Page</a>
   
 </div>
