이미지 첨부

--- a/components/store/bracelet.html
+++ b/components/store/bracelet.html
@@ -39,163 +39,104 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_1.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">빈티지 내추럴 원석 별산호 팔찌</h5>
+            <p class="card-text text-muted">₩7,900</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_2.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">12월 원석 탄생석 심플 매듭 팔찌</h5>
+            <p class="card-text text-muted">₩5,400</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_3.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">심지 점과 선 원석 매듭 끈 팔찌</h5>
+            <p class="card-text text-muted">₩6,700</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_4.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">딸기 쿼츠 원석 자개 매듭 실팔찌</h5>
+            <p class="card-text text-muted">₩8,200</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_5.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">블루&클리어 원석 화이트 끈 매듭 팔찌</h5>
+            <p class="card-text text-muted">₩6,600</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_6.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">모지 새벽녘 레이어드 원석 매듭 팔찌</h5>
+            <p class="card-text text-muted">₩7,400</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_7.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">장미 원석 매듭 슬라이드 실팔찌</h5>
+            <p class="card-text text-muted">₩6,400</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_8.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">원석 매듭 소원 끈 자개 슬라이드 실팔찌</h5>
+            <p class="card-text text-muted">₩6,900</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_9.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">글로엣 심플 원석 매듭 실팔찌</h5>
+            <p class="card-text text-muted">₩4,200</p>
             
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/bracelet/bracelet_10.jpg" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">클리어 나비 비즈 실팔찌</h5>
+            <p class="card-text text-muted">₩7,800</p>
             
             </div>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
       </div>
     </div>
   </div>
