--- a/components/store/diy.html
+++ b/components/store/diy.html
@@ -39,161 +39,28 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/DIY/DIY_1.jpg" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
+            <h5 class="card-title">달리아 비즈 실 목걸이 만들기 DIY 키트 세트</h5>
+            <p class="card-text text-muted">₩6,900</p>
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/DIY/DIY_2.jpg" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
+            <h5 class="card-title">전통 동심결 매듭 키링 만들기 키트 DIY 네잎클로버</h5>
+            <p class="card-text text-muted">₩5,600</p>
             </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/DIY/DIY_4.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
+            <h5 class="card-title">탄생석 실팔찌 만들기 DIY 키트</h5>
+            <p class="card-text text-muted">₩9,600</p>
             </div>
         </div>
       </div>
