--- a/components/store/necklace.html
+++ b/components/store/necklace.html
@@ -39,9 +39,99 @@
     <div class="row g-4">
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_1.jpg" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
+            <h5 class="card-title">빈티지 별 원석 목걸이</h5>
+            <p class="card-text text-muted">₩12,800</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_2.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">블랙 화이트 스타 비즈 목걸이</h5>
+            <p class="card-text text-muted">₩13,500</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_3.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title"> 나비 펜던트 가죽 끈 목걸이</h5>
+            <p class="card-text text-muted">₩10,200</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_4.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">하트 나비 펜던트 실 목걸이</h5>
+            <p class="card-text text-muted">₩10,100</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_5.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">유색 원석 실버볼 실 목걸이</h5>
+            <p class="card-text text-muted">₩9,800</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_6.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">장미 실버볼 롱 레이어드 목걸이</h5>
+            <p class="card-text text-muted">₩14,200</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_7.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">블랙 실버 비즈 목걸이</h5>
+            <p class="card-text text-muted">₩12,800</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_8.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">블랙 믹스 스타 목걸이</h5>
+            <p class="card-text text-muted">₩13,500</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_9.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">히카 빈티지 플라워 목걸이</h5>
+            <p class="card-text text-muted">₩14,000</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_10.jpg" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">스타 볼로 매듭 실 목걸이</h5>
             <p class="card-text text-muted">₩49,000</p>
             
             </div>
@@ -49,9 +139,29 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_11.jpg" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
+            <h5 class="card-title">하트 펜던트 오닉스 비즈 목걸이</h5>
+            <p class="card-text text-muted">₩11,900</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_12.png" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">블랙 리본 써지컬스틸 오닉스 원석 끈 목걸이</h5>
+            <p class="card-text text-muted">₩13,900</p>
+            
+            </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card product-card">
+            <img src="/image/necklace/necklace_13.png" class="product-img" alt="product-imgage">
+            <div class="card-body">
+            <h5 class="card-title">루나링 별 원석 끈 목걸이</h5>
             <p class="card-text text-muted">₩49,000</p>
             
             </div>
@@ -59,9 +169,9 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_14.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
+            <h5 class="card-title">하트 써지컬 스틸 드롭 목걸이</h5>
             <p class="card-text text-muted">₩49,000</p>
             
             </div>
@@ -69,9 +179,9 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_15.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
+            <h5 class="card-title">빈티지 별 하트 끈 목걸이</h5>
             <p class="card-text text-muted">₩49,000</p>
             
             </div>
@@ -79,9 +189,9 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_16.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
+            <h5 class="card-title">캣츠아이 원석 끈 목걸이</h5>
             <p class="card-text text-muted">₩49,000</p>
             
             </div>
@@ -89,9 +199,9 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_17.png" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
+            <h5 class="card-title">블랙 크랙 원석 드롭 목걸이</h5>
             <p class="card-text text-muted">₩49,000</p>
             
             </div>
@@ -99,100 +209,10 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-            <div class="product-img">Product Image</div>
+            <img src="/image/necklace/necklace_19.jpg" class="product-img" alt="product-imgage">
             <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
-            
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="card product-card">
-            <div class="product-img">Product Image</div>
-            <div class="card-body">
-            <h5 class="card-title">상품명</h5>
-            <p class="card-text text-muted">₩49,000</p>
+            <h5 class="card-title">리우 원석 빈티지 보헤미안 마블 목걸이</h5>
+            <p class="card-text text-muted">₩11,900</p>
             
             </div>
         </div>
