제품 상세 페이지 연결

--- a/components/store/bracelet.html
+++ b/components/store/bracelet.html
@@ -39,8 +39,10 @@
       <div class="row g-4">
         <div class="col-md-3">
           <div class="card product-card">
-            <img src="/image/bracelet/bracelet_1.png" class="product-img" alt="product-imgage">
-            <div class="card-body">
+              <a href="/components/store/product-detail_01.html">
+                <img src="/image/bracelet/bracelet_1.png" class="product-img" alt="product-imgage">
+              </a>
+              <div class="card-body">
               <h5 class="card-title">빈티지 내추럴 원석 별산호 팔찌</h5>
               <p class="card-text text-muted">₩7,900</p>
             </div>
@@ -48,8 +50,10 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
-            <img src="/image/bracelet/bracelet_2.png" class="product-img" alt="product-imgage">
-            <div class="card-body">
+            <a href="/components/store/product-detail_02.html">
+                <img src="/image/bracelet/bracelet_2.png" class="product-img" alt="product-imgage">
+              </a>
+              <div class="card-body">
               <h5 class="card-title">12월 원석 탄생석 심플 매듭 팔찌</h5>
               <p class="card-text text-muted">₩5,400</p>
             </div>
@@ -57,7 +61,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_03.html">
             <img src="/image/bracelet/bracelet_3.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">심지 점과 선 원석 매듭 끈 팔찌</h5>
               <p class="card-text text-muted">₩6,700</p>
@@ -66,7 +72,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_04.html?">
             <img src="/image/bracelet/bracelet_4.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">딸기 쿼츠 원석 자개 매듭 실팔찌</h5>
               <p class="card-text text-muted">₩8,200</p>
@@ -75,7 +83,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_05.html">
             <img src="/image/bracelet/bracelet_5.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">블루&클리어 원석 화이트 끈 매듭 팔찌</h5>
               <p class="card-text text-muted">₩6,600</p>
@@ -84,7 +94,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_06.html">
             <img src="/image/bracelet/bracelet_6.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">모지 새벽녘 레이어드 원석 매듭 팔찌</h5>
               <p class="card-text text-muted">₩7,400</p>
@@ -93,7 +105,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_07.html">
             <img src="/image/bracelet/bracelet_7.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">장미 원석 매듭 슬라이드 실팔찌</h5>
               <p class="card-text text-muted">₩6,400</p>
@@ -102,16 +116,20 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_08.html">
             <img src="/image/bracelet/bracelet_8.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
-              <h5 class="card-title">원석 매듭 소원 끈 자개 슬라이드 실팔찌</h5>
+              <h5 class="card-title">원석 소원 끈 자개 슬라이드 실팔찌</h5>
               <p class="card-text text-muted">₩6,900</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_09.html">
             <img src="/image/bracelet/bracelet_9.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">글로엣 심플 원석 매듭 실팔찌</h5>
               <p class="card-text text-muted">₩4,200</p>
@@ -120,7 +138,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_10.html">
             <img src="/image/bracelet/bracelet_10.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">클리어 나비 비즈 실팔찌</h5>
               <p class="card-text text-muted">₩7,800</p>
