--- a/components/store/keyring.html
+++ b/components/store/keyring.html
@@ -39,16 +39,20 @@
       <div class="row g-4">
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k01.html">
             <img src="/image/keyring/keyring_1.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
-              <h5 class="card-title">나비 써지컬 펜던트 원석 키링 팔찌</h5>
+              <h5 class="card-title">나비 써지컬 펜던트 마블 원석 키링</h5>
               <p class="card-text text-muted">₩7,600</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k02.html">
             <img src="/image/keyring/keyring_3.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">천사 키라키라 비즈 다꾸 폰꾸 키링</h5>
               <p class="card-text text-muted">₩8,400</p>
@@ -57,7 +61,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k03.html">
             <img src="/image/keyring/keyring_4.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">고양이와 물고기 원석 비즈 매듭끈 키링</h5>
               <p class="card-text text-muted">₩6,300</p>
@@ -66,7 +72,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k04.html">
             <img src="/image/keyring/keyring_5.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">꿀자몽 핑크 플라워 비즈 매듭 키링</h5>
               <p class="card-text text-muted">₩5,800</p>
@@ -75,7 +83,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k05.html">
             <img src="/image/keyring/keyring_6.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">소피 물방울 비즈 매듭 키링</h5>
               <p class="card-text text-muted">₩6,900</p>
@@ -84,7 +94,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k06.html">
             <img src="/image/keyring/keyring_7.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">청옥 행운 물고기 마블 키링</h5>
               <p class="card-text text-muted">₩9,800</p>
@@ -93,7 +105,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_k07.html">
             <img src="/image/keyring/keyring_8.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">오무무 하늘 원석 매듭 키링</h5>
               <p class="card-text text-muted">₩7,800</p>
