--- a/components/store/necklace.html
+++ b/components/store/necklace.html
@@ -39,7 +39,9 @@
       <div class="row g-4">
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n01.html">
             <img src="/image/necklace/necklace_1.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">빈티지 별 원석 목걸이</h5>
               <p class="card-text text-muted">₩12,800</p>
@@ -48,7 +50,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n02.html">
             <img src="/image/necklace/necklace_2.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">블랙 화이트 스타 비즈 목걸이</h5>
               <p class="card-text text-muted">₩13,500</p>
@@ -57,7 +61,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n03.html">
             <img src="/image/necklace/necklace_3.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title"> 나비 펜던트 가죽 끈 목걸이</h5>
               <p class="card-text text-muted">₩10,200</p>
@@ -66,7 +72,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n04.html">
             <img src="/image/necklace/necklace_4.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">하트 나비 펜던트 실 목걸이</h5>
               <p class="card-text text-muted">₩10,100</p>
@@ -75,7 +83,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n05.html">
             <img src="/image/necklace/necklace_5.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">유색 원석 실버볼 실 목걸이</h5>
               <p class="card-text text-muted">₩9,800</p>
@@ -84,7 +94,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n06.html">
             <img src="/image/necklace/necklace_6.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">장미 실버볼 롱 레이어드 목걸이</h5>
               <p class="card-text text-muted">₩14,200</p>
@@ -93,7 +105,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n07.html">
             <img src="/image/necklace/necklace_7.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">블랙 실버 비즈 목걸이</h5>
               <p class="card-text text-muted">₩12,800</p>
@@ -102,7 +116,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n08.html">
             <img src="/image/necklace/necklace_8.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">블랙 믹스 스타 목걸이</h5>
               <p class="card-text text-muted">₩13,500</p>
@@ -111,7 +127,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n09.html">
             <img src="/image/necklace/necklace_9.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">히카 빈티지 플라워 목걸이</h5>
               <p class="card-text text-muted">₩14,000</p>
@@ -120,16 +138,20 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n10.html">
             <img src="/image/necklace/necklace_10.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">스타 볼로 매듭 실 목걸이</h5>
-              <p class="card-text text-muted">₩49,000</p>
+              <p class="card-text text-muted">₩19,000</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n11.html">
             <img src="/image/necklace/necklace_11.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">하트 펜던트 오닉스 비즈 목걸이</h5>
               <p class="card-text text-muted">₩11,900</p>
@@ -138,7 +160,9 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n12.html">
             <img src="/image/necklace/necklace_12.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">블랙 리본 써지컬스틸 오닉스 원석 끈 목걸이</h5>
               <p class="card-text text-muted">₩13,900</p>
@@ -147,52 +171,64 @@
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n13.html">
             <img src="/image/necklace/necklace_13.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">루나링 별 원석 끈 목걸이</h5>
-              <p class="card-text text-muted">₩49,000</p>
+              <p class="card-text text-muted">₩12,800</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n14.html">
             <img src="/image/necklace/necklace_14.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">하트 써지컬 스틸 드롭 목걸이</h5>
-              <p class="card-text text-muted">₩49,000</p>
+              <p class="card-text text-muted">₩12,100</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n15.html">
             <img src="/image/necklace/necklace_15.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">빈티지 별 하트 끈 목걸이</h5>
-              <p class="card-text text-muted">₩49,000</p>
+              <p class="card-text text-muted">₩12,700</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n16.html">
             <img src="/image/necklace/necklace_16.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">캣츠아이 원석 끈 목걸이</h5>
-              <p class="card-text text-muted">₩49,000</p>
+              <p class="card-text text-muted">₩12,400</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n17.html">
             <img src="/image/necklace/necklace_17.png" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">블랙 크랙 원석 드롭 목걸이</h5>
-              <p class="card-text text-muted">₩49,000</p>
+              <p class="card-text text-muted">₩15,000</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card product-card">
+            <a href="/components/store/product-detail_n18.html">
             <img src="/image/necklace/necklace_19.jpg" class="product-img" alt="product-imgage">
+            </a>
             <div class="card-body">
               <h5 class="card-title">리우 원석 빈티지 보헤미안 마블 목걸이</h5>
               <p class="card-text text-muted">₩11,900</p>
