--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,8 @@ body.has-fixed-category {
   justify-content: center;
   font-size: 0.9rem;
   color: #999;
+  width: 100%;
+  height: 220px; 
 }
 
 .product-img img {
@@ -368,3 +370,74 @@ body.has-fixed-category {
 }
 
 /* 주문내역 */
+
+/*제품 상세정보*/
+
+.product-image-wrap {
+  width: 100%;
+  max-width: 380px; 
+  margin: 0 auto;
+  border: 1px solid #ddd;
+  background-color: #fafafa;
+}
+
+.product-detail-img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+
+.product-info {
+  border-top: 2px solid #222;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+
+.product-title {
+  margin-bottom: 24px;
+  font-weight: 600;
+}
+
+
+.info-row {
+  display: flex;
+  align-items: center;
+  padding: 12px 0;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.info-row .label {
+  width: 120px;
+  font-size: 14px;
+  color: #666;
+}
+
+.info-row .value {
+  flex: 1;
+  font-size: 15px;
+}
+
+
+.qty-input {
+  width: 60px;
+  text-align: center;
+  margin: 0 8px;
+}
+
+
+.total-price {
+  font-size: 18px;
+  font-weight: bold;
+  color: #0d6efd;
+}
+
+
+.button-area {
+  display: flex;
+  gap: 10px;
+  margin-top: 24px;
+}
+
+
